# api-books

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.prod.yaml  docker-compose.yml  example.env  pyproject.toml  requirements.txt  run.py
.github/workflows/: main.yml
src/: main.py
src/api/: routers.py
src/api/books/: __init__.py  router.py
src/api/categories/: __init__.py  router.py
src/common/config/: settings.py
src/common/models/: __init__.py  books.py  categories.py
src/common/schemas/: books.py  categories.py
src/common/utils/: crd.py  exceptions.py
