[tool.poetry]
name = "book-api"
version = "0.1.0"
description = ""
authors = ["Makar Bialiauski <geekmorn@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
greenlet = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
